<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="log_file_template" translatable="false">sap_log_%s.txt</string>
    <string name="crash_file_name" translatable="false">sap_crash_%s.txt</string>
    <string name="options_menu_live">Connection Information</string>
    <string name="remove">Remove</string>
    <string name="enter_new_item">Enter new item</string>
    <string name="add">Add</string>
    <string name="there_are_no_items_yet_">There are no items yet.</string>

    <!-- SystemInformationActivity -->
    <string name="application_information" translatable="false">Application Information</string>
    <string name="application_identifier" translatable="false">Identifier</string>
    <string name="application_compile_information" translatable="false">Build Information</string>
    <string name="application_install_date" translatable="false">Install Date</string>
    <string name="persistence_information" translatable="false">Persistence Status</string>
    <string name="persistence_waiting_clear_events" translatable="false">Clear events</string>
    <string name="persistence_waiting_events" translatable="false">Waiting events</string>
    <string name="application_version" translatable="false">Version</string>

    <!-- Generic -->
    <string name="empty" translatable="false"></string>
    <string name="generic_error">Error</string>
    <string name="about">Info</string>

    <!-- Signal quality -->
    <string name="signal_accuracy_indicator_view_description">GPS Accuracy</string>
    <string name="poor">poor</string>
    <string name="good">good</string>
    <string name="great">great</string>
    <string name="no_signal">no signal</string>
    <string name="ok">OK</string>

    <!-- Regatta -->
    <string name="your_regattas">Your Regattas:</string>
    <string name="options_refresh">Refresh</string>

    <!-- QR Code -->
    <string name="notify_user_db_operation_failed">Error: Database operation has failed.</string>
    <string name="no_qr_code_popup_title">No QR Code?</string>
    <string name="no_qr_code_popup_message">Please contact race management if you have not received a QR Code.</string>
    <string name="error_play_store_and_scanning_not_available">"PlayStore and Scanning not available."</string>
    <string name="scanning_cancelled">Scanning cancelled</string>
    <string name="error_scanning_qrcode">Error scanning QR Code {result-code}</string>
    <string name="notify_user_api_call_failed">An error occurred while contacting the server. Please try again.</string>
    <string name="please_wait">Please wait</string>
    <string name="error_invalid_qr_code">Invalid QR Code</string>
    <string name="checkin_digest" translatable="false">CheckinDigest</string>
    <string name="leaderboard_name" translatable="false">leaderboard_name</string>
    <string name="mark_id" translatable="false">mark_id</string>

    <!-- Eula -->
    <string name="eula_title">EULA</string>
    <string name="eula_message">By using this App you confirm to accept the SAP SE end user license agreement. Please read this EULA here.</string>
    <string name="eula_confirm">Confirm</string>
    <string name="linked_eula_message_part">here</string>

    <!-- About this app -->
    <string name="about_this_app">About this app</string>
    <string name="eula">EULA</string>
    <string name="license_information">License Information</string>

    <!-- HTTP Requests -->
    <string name="http_request_exception" translatable="false">(Request %1$d) %2$s\nHTTP response code: %3$d.\nHTTP response body: %4$s.</string>
    <string name="http_request_executed" translatable="false">(Request %d) HTTP request executed.</string>
    <string name="http_request_aborted" translatable="false">(Request %d) HTTP request aborted.</string>
    <string name="http_request_failed" translatable="false">(Request %d) HTTP request failed.</string>

    <!-- Dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="enable_gps">GPS is turned off. This app requires GPS positions. Do you want to turn on GPS in the location settings?</string>

    <!-- Message Sending -->
    <string name="sending_waiting">Currently %1$d events waiting to be sent.\nLast successful sent was at %2$s</string>
    <string name="sending_no_waiting">Currently no event waiting to be sent.</string>

    <!-- Competitor list footer text -->
    <string name="footer_text">More information on</string>
    <string name="footer_text_link">https://www.sapsailing.com</string>

    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="time_ago" translatable="false">%1$dh %2$02d\' %3$02d\"</string>
    <string name="date_short" translatable="false">yyyy-MM-dd</string>

    <string name="service_info" translatable="false">Sending Message Service</string>

</resources>