<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_separator_height"
        android:background="@color/sap_yellow"/>

    <View
        android:id="@+id/center_anchor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        />

    <com.sap.sailing.android.shared.ui.customviews.OpenSansButton
        android:id="@+id/license_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_button_height"
        android:layout_above="@id/center_anchor"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/about_button_top_bottom_margin"
        android:layout_marginLeft="@dimen/about_button_side_margin"
        android:layout_marginRight="@dimen/about_button_side_margin"
        android:layout_marginTop="@dimen/about_button_top_bottom_margin"
        android:background="@drawable/rounded_btn_yellow"
        android:text="@string/license_information"
        android:textAllCaps="false"
        android:textSize="@dimen/about_button_text_size"
        android:textStyle="bold"/>

    <com.sap.sailing.android.shared.ui.customviews.OpenSansButton
        android:id="@+id/eula_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_button_height"
        android:layout_below="@id/center_anchor"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/about_button_top_bottom_margin"
        android:layout_marginLeft="@dimen/about_button_side_margin"
        android:layout_marginRight="@dimen/about_button_side_margin"
        android:layout_marginTop="@dimen/about_button_top_bottom_margin"
        android:background="@drawable/rounded_btn_yellow"
        android:text="@string/eula"
        android:textAllCaps="false"
        android:textSize="@dimen/about_button_text_size"
        android:textStyle="bold"/>

    <com.sap.sailing.android.shared.ui.customviews.OpenSansTextView
        android:id="@+id/system_information_application_version_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_version"
        android:layout_marginLeft="@dimen/about_button_side_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/eula_button"/>

    <com.sap.sailing.android.shared.ui.customviews.OpenSansTextView
        android:id="@+id/system_information_application_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_button_side_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/system_information_application_version_header"/>

</RelativeLayout>